<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kuka_kr6_support</name>
  <version>0.1.0</version>
  <description>KUKA KR6 R900-2 support package for ROS2</description>
  <maintainer email="codewithlennylen254@gmail.com">Lenny Ng'ang'a</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>xacro</depend>
  <depend>urdf</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>